--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           >
           <ul class="menu">
             <li class="menu-item">
-              <a class="menu-link" href="./index.html">Studio</a>
+              <a class="menu-link current" href="./index.html">Studio</a>
             </li>
             <li class="menu-item">
               <a class="menu-link" href="">Portfolio</a>
@@ -65,6 +65,11 @@
           <h2 class="title-benefits visually-hidden">Benefits</h2>
           <ul class="benefits-list">
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="icon-benefits" width="64" height="64">
+                  <use href="/images/icon.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="benefist-subtitle">Strategy</h3>
               <p class="benefits-text">
                 Our goal is to identify the business problem to walk away with
@@ -72,6 +77,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="icon-benefits" width="64" height="64">
+                  <use href="/images/icon.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="benefist-subtitle">Punctuality</h3>
               <p class="benefits-text">
                 Bring the key message to the brand's audience for the best price
@@ -79,6 +89,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="icon-benefits" width="64" height="64">
+                  <use href="/images/icon.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="benefist-subtitle">Diligence</h3>
               <p class="benefits-text">
                 Research and confirm brands that present the strongest digital
@@ -86,6 +101,11 @@
               </p>
             </li>
             <li class="benefits-item">
+              <div class="benefits-icon-container">
+                <svg class="icon-benefits" width="64" height="64">
+                  <use href="/images/icon.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="benefist-subtitle">Technologies</h3>
               <p class="benefits-text">
                 Design practice focused on digital experiences. We bring forth a
@@ -111,6 +131,36 @@
               <div class="user-container">
                 <h3 class="user-name">Mark Guerrero</h3>
                 <p class="team-text">Product Designer</p>
+                <ul class="user-social-list">
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-user">
@@ -124,6 +174,36 @@
               <div class="user-container">
                 <h3 class="user-name">Tom Ford</h3>
                 <p class="team-text">Frontend Developer</p>
+                <ul class="user-social-list">
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-user">
@@ -137,6 +217,36 @@
               <div class="user-container">
                 <h3 class="user-name">Camila Garcia</h3>
                 <p class="team-text">Marketing</p>
+                <ul class="user-social-list">
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-user">
@@ -150,6 +260,36 @@
               <div class="user-container">
                 <h3 class="user-name">Daniel Wilson</h3>
                 <p class="team-text">UI Designer</p>
+                <ul class="user-social-list">
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="user-social-item">
+                    <a class="user-social-link" href="">
+                      <svg class="user-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
           </ul>
@@ -161,78 +301,120 @@
           <h2 class="portfolio-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/banking-app.jpg"
-                alt="Banking App picture"
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/banking-app.jpg"
+                  alt="Banking App picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Banking App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/cashless-payment.jpg"
-                alt="Cashless Payment picture"
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/cashless-payment.jpg"
+                  alt="Cashless Payment picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/meditation-app.jpg"
-                alt="Meditation App picture "
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/meditation-app.jpg"
+                  alt="Meditation App picture "
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
                 <p class="portfolio-text">App</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/taxi-service.jpg"
-                alt="Taxi Service picture"
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/taxi-service.jpg"
+                  alt="Taxi Service picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
                 <p class="portfolio-text">Marketing</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/screen-illustrations.jpg"
-                alt="Screen Illustrations picture"
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/screen-illustrations.jpg"
+                  alt="Screen Illustrations picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
                 <p class="portfolio-text">Design</p>
               </div>
             </li>
             <li class="portfolio-item">
-              <img
-                class="pic-portfolio"
-                src="./images/online-courses.jpg"
-                alt="Online Courses picture"
-                width="360"
-                height="300"
-              />
+              <div class="pic-div">
+                <img
+                  class="pic-portfolio"
+                  src="./images/online-courses.jpg"
+                  alt="Online Courses picture"
+                  width="360"
+                  height="300"
+                />
+                <div class="overlay">
+                  14 Stylish and User-Friendly App Design Concepts · Task
+                  Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
+                  · Cloud Storage App
+                </div>
+              </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
                 <p class="portfolio-text">Marketing</p>
@@ -244,14 +426,49 @@
     </main>
     <!-- Page Footer -->
     <footer class="page-footer">
-      <div class="container">
-        <a class="site-logo footer-logo" href="./index.html"
-          >Web<span class="color-logo">Studio</span>
-        </a>
-        <p class="text-footer">
-          Increase the flow of customers and sales for your business with
-          digital marketing & growth solutions.
-        </p>
+      <div class="container footer-container">
+        <div class="logo-footer-container">
+          <a class="site-logo footer-logo" href="./index.html"
+            >Web<span class="color-logo">Studio</span>
+          </a>
+          <p class="text-footer">
+            Increase the flow of customers and sales for your business with
+            digital marketing & growth solutions.
+          </p>
+        </div>
+        <div class="icon-footer-container">
+          <p class="text-icon">Social media</p>
+          <ul class="footer-social-list"></ul>
+                  <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                      <svg class="footer-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-instagram"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                      <svg class="footer-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                      <svg class="footer-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="footer-social-item">
+                    <a class="footer-social-link" href="">
+                      <svg class="footer-icon" width="16" height="16">
+                        <use href="/images/icon.svg#icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+        </div>
       </div>
     </footer>
   </body>
