--- a/index.html
+++ b/index.html
@@ -438,36 +438,36 @@
         </div>
         <div class="icon-footer-container">
           <p class="text-icon">Social media</p>
-          <ul class="footer-social-list"></ul>
-                  <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                      <svg class="footer-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-instagram"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                      <svg class="footer-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-twitter"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                      <svg class="footer-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-facebook"></use>
-                      </svg>
-                    </a>
-                  </li>
-                  <li class="footer-social-item">
-                    <a class="footer-social-link" href="">
-                      <svg class="footer-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-linkedin"></use>
-                      </svg>
-                    </a>
-                  </li>
-                </ul>
+          <ul class="footer-social-list">
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="/images/icon.svg#icon-instagram"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="/images/icon.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="/images/icon.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="footer-social-item">
+              <a class="footer-social-link" href="">
+                <svg class="footer-icon" width="16" height="16">
+                  <use href="/images/icon.svg#icon-linkedin"></use>
+                </svg>
+              </a>
+            </li>
+          </ul>
         </div>
       </div>
     </footer>
