--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg class="icon-benefits" width="64" height="64">
-                  <use href="/images/icon.svg#icon-antenna"></use>
+                  <use href="./images/icons.svg#icon-antenna"></use>
                 </svg>
               </div>
               <h3 class="benefist-subtitle">Strategy</h3>
@@ -79,7 +79,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg class="icon-benefits" width="64" height="64">
-                  <use href="/images/icon.svg#icon-clock"></use>
+                  <use href="./images/icons.svg#icon-clock"></use>
                 </svg>
               </div>
               <h3 class="benefist-subtitle">Punctuality</h3>
@@ -91,7 +91,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg class="icon-benefits" width="64" height="64">
-                  <use href="/images/icon.svg#icon-diagram"></use>
+                  <use href="./images/icons.svg#icon-diagram"></use>
                 </svg>
               </div>
               <h3 class="benefist-subtitle">Diligence</h3>
@@ -103,7 +103,7 @@
             <li class="benefits-item">
               <div class="benefits-icon-container">
                 <svg class="icon-benefits" width="64" height="64">
-                  <use href="/images/icon.svg#icon-astronaut"></use>
+                  <use href="./images/icons.svg#icon-astronaut"></use>
                 </svg>
               </div>
               <h3 class="benefist-subtitle">Technologies</h3>
@@ -135,28 +135,28 @@
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -178,28 +178,28 @@
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -221,28 +221,28 @@
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -264,28 +264,28 @@
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-instagram"></use>
+                        <use href="./images/icons.svg#icon-instagram"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-twitter"></use>
+                        <use href="./images/icons.svg#icon-twitter"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-facebook"></use>
+                        <use href="./images/icons.svg#icon-facebook"></use>
                       </svg>
                     </a>
                   </li>
                   <li class="user-social-item">
                     <a class="user-social-link" href="">
                       <svg class="user-icon" width="16" height="16">
-                        <use href="/images/icon.svg#icon-linkedin"></use>
+                        <use href="./images/icons.svg#icon-linkedin"></use>
                       </svg>
                     </a>
                   </li>
@@ -442,28 +442,28 @@
             <li class="footer-social-item">
               <a class="footer-social-link" href="">
                 <svg class="footer-icon" width="16" height="16">
-                  <use href="/images/icon.svg#icon-instagram"></use>
+                  <use href="./images/icons.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-link" href="">
                 <svg class="footer-icon" width="16" height="16">
-                  <use href="/images/icon.svg#icon-twitter"></use>
+                  <use href="./images/icons.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-link" href="">
                 <svg class="footer-icon" width="16" height="16">
-                  <use href="/images/icon.svg#icon-facebook"></use>
+                  <use href="./images/icons.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
             <li class="footer-social-item">
               <a class="footer-social-link" href="">
                 <svg class="footer-icon" width="16" height="16">
-                  <use href="/images/icon.svg#icon-linkedin"></use>
+                  <use href="./images/icons.svg#icon-linkedin"></use>
                 </svg>
               </a>
             </li>
