--- a/index.html
+++ b/index.html
@@ -309,7 +309,7 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <div class="text-over overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
