--- a/index.html
+++ b/index.html
@@ -309,11 +309,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="text-over overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Banking App</h3>
@@ -329,11 +329,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Cashless Payment</h3>
@@ -349,11 +349,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Meditation App</h3>
@@ -369,11 +369,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Taxi Service</h3>
@@ -389,11 +389,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Screen Illustrations</h3>
@@ -409,11 +409,11 @@
                   width="360"
                   height="300"
                 />
-                <div class="overlay">
+                <p class="overlay">
                   14 Stylish and User-Friendly App Design Concepts · Task
                   Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App
                   · Cloud Storage App
-                </div>
+                </p>
               </div>
               <div class="portfolio-container">
                 <h3 class="portfolio-subtitle">Online Courses</h3>
